update auth api docs
